# tryton

./: .drone.yml  .flake8  .gitignore  .gitlab-ci-modules.yml  .gitlab-ci.yml  .hgignore  .hgtags  .isort.cfg  .rstcheck.cfg  CHANGELOG  COPYRIGHT  Gruntfile.js  INSTALL  MANIFEST.in  README  README.md  README.rst  TODO  __init__.py  __tryton__.py  account.py  account.rst  account.xml  account_be.xml  account_be_fr.xml  account_be_nl.xml  account_de.xml  account_fr.xml  account_normal.xml  account_pyme.xml  address.py  address.xml  aeat303.txt  aeat347.txt  aeat349.txt  aged_balance.odt  allocation.py  analytic.rst  analytic_account.py  analytic_account.xml  (+250 more)
cookiecutter-module/{{ cookiecutter.module_name }}/: .readthedocs.yaml  COPYRIGHT  __init__.py  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_asset/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  __init__.py  account.py  account.xml  account_chart.xml  account_chart_de.xml  account_chart_en.xml  account_chart_es.xml  account_chart_fr.xml  asset.py  asset.xml  asset_table.fodt  asset_table.odt  invoice.py  message.xml  minimal_chart.xml  minimal_chart_bg.xml  minimal_chart_ca.xml  minimal_chart_de.xml  minimal_chart_es.xml  minimal_chart_fr.xml  minimal_chart_nl.xml  minimal_chart_pt.xml  minimal_chart_sl.xml  product.py  product.xml  purchase.py  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_be/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  README  __init__.py  __tryton__.py  account.py  account.xml  account_be.xml  account_be_fr.xml  account_be_nl.xml  localize.xsl  ogm_vcs.py  pyproject.toml  setup.py  tax_be.xml  tax_be_fr.xml  tax_be_nl.xml  tox.ini  tryton.cfg
modules/account_budget/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  __init__.py  account.py  account.xml  exceptions.py  message.xml  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_es_sii/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  __init__.py  account.py  account.xml  exceptions.py  ir.py  message.xml  party.py  pyproject.toml  setup.py  tax.xml  tox.ini  tryton.cfg
modules/account_export_winbooks/: CHANGELOG  COPYRIGHT  __init__.py  account.py  account.xml  account_be.xml  account_be_fr.xml  account_be_nl.xml  message.xml  party.py  party.xml  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_fr/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  __init__.py  __tryton__.py  account.py  account.xml  account_fr.xml  pyproject.toml  setup.py  tax_fr.xml  tox.ini  tryton.cfg
modules/account_fr_chorus/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  README  __init__.py  account.py  account.xml  edocument.py  exceptions.py  ir.py  message.xml  party.py  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_payment/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  README  __init__.py  account.py  account.xml  exceptions.py  message.xml  party.py  party.xml  payment.py  payment.xml  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_payment_braintree/: .drone.yml  .readthedocs.yaml  CHANGELOG  COPYRIGHT  __init__.py  account.py  account.xml  checkout.html  common.py  exceptions.py  ir.py  message.xml  party.py  party.xml  pyproject.toml  routes.py  setup.py  tox.ini  tryton.cfg
modules/account_payment_stripe/: .drone.yml  .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  README  __init__.py  checkout.html  common.py  email_checkout.html  exceptions.py  ir.py  message.xml  party.py  payment.py  payment.xml  pyproject.toml  routes.py  setup.py  tox.ini  tryton.cfg
modules/account_statement_aeb43/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  MANIFEST.in  README  __init__.py  pyproject.toml  setup.py  statement.py  statement.xml  tox.ini  tryton.cfg
modules/account_stock_shipment_cost_weight/: .readthedocs.yaml  CHANGELOG  __init__.py  account.py  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/account_syscohada/: CHANGELOG  __init__.py  account.py  account_syscohada.xml  account_syscohada_2001_fr.xml  account_syscohada_2016_fr.xml  localize.xsl  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/carrier_subdivision/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  __init__.py  carrier.py  pyproject.toml  sale.py  setup.py  tox.ini  tryton.cfg
modules/country/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  __init__.py  __tryton__.py  bg_BG.csv  country.py  country.xml  cs_CZ.csv  data.xml  de_DE.csv  es_CO.csv  es_ES.csv  fr_FR.csv  organization.xml  pyproject.toml  region.xml  ru_RU.csv  setup.py  tox.ini  tryton.cfg
modules/currency/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  README  __init__.py  __tryton__.py  currency.py  currency.xml  data.xml  de_DE.csv  ecb.py  es_CO.csv  es_ES.csv  exceptions.py  fields.py  fr_FR.csv  ir.py  message.xml  pyproject.toml  ru_RU.csv  setup.py  tox.ini  tryton.cfg
modules/dashboard/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  README  __init__.py  __tryton__.py  dashboard.py  dashboard.xml  es_CO.csv  fr_FR.csv  ir.py  ir.xml  nl_NL.csv  pyproject.toml  res.py  res.xml  setup.py  tox.ini  tryton.cfg
modules/document_incoming_ocr_typless/: .readthedocs.yaml  CHANGELOG  __init__.py  document.py  document.xml  exceptions.py  message.xml  pyproject.toml  setup.py  tox.ini  tryton.cfg
modules/edocument_ubl/: CHANGELOG  COPYRIGHT  account.py  document.py  edocument.py  exceptions.py  message.xml  (+5 more)
naiad/: CHANGELOG  COPYRIGHT  pyproject.toml  tox.ini
proteus/: .drone.yml  .readthedocs.yaml  CHANGELOG  COPYRIGHT  INSTALL  LICENSE  MANIFEST.in  README  __init__.py  config.py  pyproject.toml  pyson.py  setup.py  tox.ini
tryton/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  MANIFEST.in  hatch_build.py  make-darwin-installer.sh  make-win32-installer.sh  pyproject.toml  setup-freeze.py  setup.cfg  setup.py  tox.ini
trytond/: .readthedocs.yaml  CHANGELOG  COPYRIGHT  __init__.py  hatch_build.py  pyproject.toml  setup.py  tox.ini  version.py
trytond-gis/: .drone.yml  .readthedocs.yaml  CHANGELOG  COPYRIGHT  MANIFEST.in  README  pyproject.toml  setup.py  tox.ini
(+13175 files in other folders)
