[build-system]
requires = ['hatchling >= 1', 'hatch-tryton']
build-backend = 'hatchling.build'

[project]
name = 'naiad'
dynamic = ['version', 'dependencies', 'optional-dependencies', 'authors', 'readme']
requires-python = '>=3.10'
maintainers = [
    {name = "Tryton", email = "foundation@tryton.org"},
    ]
description = "Library to access Tryton's REST API"
license = 'LGPL-3.0-or-later'
license-files = ['LICENSE', 'COPYRIGHT']
keywords = ["tryton", "cli", "REST"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Tryton",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[project.urls]
homepage = "https://www.tryton.org/"
documentation = "https://docs.tryton.org/client-rest/"
changelog = "https://docs.tryton.org/client-library/releases.html"
forum = "https://discuss.tryton.org/tags/naiad"
issues = "https://bugs.tryton.org/tryton"
repository = "https://code.tryton.org/tryton"
funding = "https://www.tryton.org/donate"

[tool.hatch.version]
path = 'naiad/__init__.py'

[tool.hatch.build]
packages = ['naiad']

[tool.hatch.metadata.hooks.tryton]
dependencies = [
    'httpx',
    ]
copyright = 'COPYRIGHT'
readme = 'README.rst'

[tool.hatch.metadata.hooks.tryton.optional-dependencies]
test = ['respx']

[tool.hatch.metadata.hooks.tryton.tryton-optional-dependencies]
test = ['trytond']
