[build-system]
requires = ['hatchling >= 1', 'hatch-tryton']
build-backend = 'hatchling.build'

[project]
name = 'trytond_account_budget'
dynamic = ['version', 'dependencies', 'optional-dependencies', 'authors', 'readme']
requires-python = '>=3.10'
maintainers = [
    {name = "Tryton", email = "foundation@tryton.org"},
    ]
description = "Accounting budget for Tryton"
license = 'GPL-3.0-or-later'
license-files = ['LICENSE', 'icons/LICENSE', 'COPYRIGHT']
keywords = ["tryton", "accounting", "budget"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Tryton",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[project.entry-points.'trytond.modules']
account_budget = 'trytond.modules.account_budget'

[project.urls]
homepage = "https://www.tryton.org/"
documentation = "https://docs.tryton.org/modules-account-budget/"
changelog = "https://docs.tryton.org/modules-account-budget/releases.html"
forum = "https://www.tryton.org/forum"
issues = "https://bugs.tryton.org/tryton"
funding = "https://www.tryton.org/donate"

[tool.hatch.build]
include = [
    '**/tryton.cfg',
    '**/*.py',
    '**/*.xml',
    'view/**/*.xml',
    'locale/**/*.po',
    '**/*.fodt',
    'icons/**/*.svg',
    'tests/**/*.rst',
    'tests/**/*.json',
    ]
exclude = ['doc']

[tool.hatch.build.targets.wheel.sources]
"" = "trytond/modules/account_budget"

[tool.hatch.metadata.hooks.tryton]
dependencies = []
copyright = 'COPYRIGHT'
readme = 'README.rst'

[tool.hatch.metadata.hooks.tryton.tryton-optional-dependencies]
test = ['proteus']
