[build-system]
requires = ['hatchling >= 1', 'hatch-tryton']
build-backend = 'hatchling.build'

[project]
name = 'trytond_account_syscohada'
dynamic = ['version', 'dependencies', 'optional-dependencies', 'authors', 'readme']
requires-python = '>=3.9'
maintainers = [
    {name = "Tryton", email = "foundation@tryton.org"},
    ]
description = "SYSCOHADA chart of accounts for Tryton"
license = 'GPL-3.0-or-later'
license-files = ['LICENSE', 'icons/LICENSE', 'COPYRIGHT']
keywords = ["tryton", "accounting", "coa", "SYSCOHADA"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Tryton",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[project.entry-points.'trytond.modules']
account_syscohada = 'trytond.modules.account_syscohada'

[project.urls]
homepage = "https://www.tryton.org/"
documentation = "https://docs.tryton.org/modules-account-syscohada/"
changelog = "https://docs.tryton.org/modules-account-syscohada/releases.html"
forum = "https://www.tryton.org/forum"
issues = "https://bugs.tryton.org/tryton"
repository = "https://code.tryton.org/tryton"
funding = "https://www.tryton.org/donate"

[tool.hatch.build]
include = [
    '**/tryton.cfg',
    '**/*.py',
    '**/*.xml',
    'view/**/*.xml',
    'locale/**/*.po',
    '**/*.fodt',
    'icons/**/*.svg',
    'tests/**/*.rst',
    'tests/**/*.json',
    ]
exclude = ['doc']

[tool.hatch.build.targets.wheel.sources]
"" = "trytond/modules/account_syscohada"

[tool.hatch.metadata.hooks.tryton]
dependencies = []
copyright = 'COPYRIGHT'
readme = 'README.rst'

[tool.hatch.metadata.hooks.tryton.tryton-optional-dependencies]
test = []
