[build-system]
requires = ['hatchling >= 1', 'hatch-tryton']
build-backend = 'hatchling.build'

[project]
name = 'trytond_country'
dynamic = ['version', 'dependencies', 'optional-dependencies', 'authors', 'readme']
requires-python = '>=3.9'
maintainers = [
    {name = "Tryton", email = "foundation@tryton.org"},
    ]
description = "Countries and subdivisions for Tryton"
license = 'GPL-3.0-or-later'
license-files = ['LICENSE', 'icons/LICENSE', 'COPYRIGHT']
keywords = ["tryton", "country"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Tryton",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[project.entry-points.'trytond.modules']
country = 'trytond.modules.country'

[project.scripts]
trytond_import_countries = 'trytond.modules.country.scripts.import_countries:run [data]'
trytond_import_postal_codes = 'trytond.modules.country.scripts.import_postal_codes:run [GeoNames]'

[project.urls]
homepage = "https://www.tryton.org/"
documentation = "https://docs.tryton.org/modules-country/"
changelog = "https://docs.tryton.org/modules-country/releases.html"
forum = "https://www.tryton.org/forum"
issues = "https://bugs.tryton.org/tryton"
repository = "https://code.tryton.org/tryton"
funding = "https://www.tryton.org/donate"

[tool.hatch.build]
include = [
    '**/tryton.cfg',
    '**/*.py',
    '**/*.xml',
    'view/**/*.xml',
    'locale/**/*.po',
    '**/*.fodt',
    'icons/**/*.svg',
    'tests/**/*.rst',
    'tests/**/*.json',
    ]
exclude = ['doc']

[tool.hatch.build.targets.wheel.sources]
"" = "trytond/modules/country"

[tool.hatch.metadata.hooks.tryton]
dependencies = ['python-sql']
copyright = 'COPYRIGHT'
readme = 'README.rst'

[tool.hatch.metadata.hooks.tryton.optional-dependencies]
completion = ['argcomplete']
data = ['pycountry >= 16.11.8']
test = ['pycountry >= 16.11.8']

[tool.hatch.metadata.hooks.tryton.tryton-optional-dependencies]
GeoNames = ['proteus']
data = ['proteus']
test = ['proteus']
